--- a/Source/GitTime.Web/Web.config
+++ b/Source/GitTime.Web/Web.config
@@ -5,8 +5,8 @@
   </configSections>
 
   <connectionStrings>
-    <add name="TimeTracker.LocalDB" connectionString="Data Source=(LocalDB)\v11.0;AttachDbFileName=|DataDirectory|\TimeTracker.mdf;Initial Catalog=TimeTracker;Integrated Security=True;" providerName="System.Data.SqlClient"/>
-    <add name="TimeTracker" connectionString="Data Source=(local);Initial Catalog=Local_GitTime;Integrated Security=True;" providerName="System.Data.SqlClient" />
+    <add name="GitTime.LocalDB" connectionString="Data Source=(LocalDB)\v11.0;AttachDbFileName=|DataDirectory|\TimeTracker.mdf;Initial Catalog=TimeTracker;Integrated Security=True;" providerName="System.Data.SqlClient"/>
+    <add name="GitTime" connectionString="Data Source=(local);Initial Catalog=Local_GitTime;Integrated Security=True;" providerName="System.Data.SqlClient" />
   </connectionStrings>  
   
   <appSettings>
@@ -18,12 +18,14 @@
   
   <system.web>
     <compilation debug="true" targetFramework="4.5.1" />
+    
     <httpRuntime targetFramework="4.5.1" />
   
     <authentication mode="Forms">
       <forms name=".ASPXAUTH" loginUrl="~/Login" protection="All" timeout="43200" path="/" requireSSL="false" slidingExpiration="true" cookieless="UseDeviceProfile" domain="" enableCrossAppRedirects="false" />
     </authentication>
 
+    <globalization uiCulture="en" culture="en-CA" />
   </system.web>
   
   <runtime>
