--- a/Source/GitTime.Web/GitTime.Web.csproj
+++ b/Source/GitTime.Web/GitTime.Web.csproj
@@ -119,6 +119,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Binders\DateTimeModelBinder.cs" />
     <Compile Include="Binders\DecimalModelBinder.cs" />
+    <Compile Include="Constants.cs" />
     <Compile Include="Controllers\BaseController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\LoginController.cs" />
