--- a/Source/GitTime.Web/GitTime.Web.csproj
+++ b/Source/GitTime.Web/GitTime.Web.csproj
@@ -121,16 +121,25 @@
     <Compile Include="Binders\DecimalModelBinder.cs" />
     <Compile Include="Constants.cs" />
     <Compile Include="Controllers\BaseController.cs" />
-    <Compile Include="Controllers\BaseFindController.cs" />
+    <Compile Include="Controllers\BaseFinderController.cs" />
+    <Compile Include="Controllers\CompanyController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\LoginController.cs" />
+    <Compile Include="Controllers\PersonController.cs" />
+    <Compile Include="Controllers\ProjectController.cs" />
     <Compile Include="Controllers\TimecardController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\Database\Company.cs" />
     <Compile Include="Models\Database\Contact.cs" />
+    <Compile Include="Models\Database\ContactFilter.cs" />
+    <Compile Include="Models\Database\ContactFinderRow.cs" />
+    <Compile Include="Models\Database\ContactSource.cs" />
     <Compile Include="Models\Database\Project.cs" />
+    <Compile Include="Models\Database\ProjectFilter.cs" />
+    <Compile Include="Models\Database\ProjectFinderRow.cs" />
+    <Compile Include="Models\Database\ProjectSource.cs" />
     <Compile Include="Models\Database\Timecard.cs" />
     <Compile Include="Models\Database\Person.cs" />
     <Compile Include="Models\Database\TimecardFilter.cs" />
@@ -138,14 +147,26 @@
     <Compile Include="Models\Database\TimecardSource.cs" />
     <Compile Include="Models\GitTimeDbInitializer.cs" />
     <Compile Include="Models\GitTimeContext.cs" />
+    <Compile Include="Models\View\Company\EditorModel.cs" />
+    <Compile Include="Models\View\Company\FinderModel.cs" />
+    <Compile Include="Models\View\Company\SearchCriteriaModel.cs" />
     <Compile Include="Models\View\LoginModel.cs" />
-    <Compile Include="Models\View\Timecard\EditModel.cs" />
-    <Compile Include="Models\View\Timecard\FindModel.cs" />
+    <Compile Include="Models\View\Person\EditorModel.cs" />
+    <Compile Include="Models\View\Person\FinderModel.cs" />
+    <Compile Include="Models\View\Person\SearchCriteriaModel.cs" />
+    <Compile Include="Models\View\Project\EditorModel.cs" />
+    <Compile Include="Models\View\Project\FinderModel.cs" />
+    <Compile Include="Models\View\Project\SearchCriteriaModel.cs" />
+    <Compile Include="Models\View\Timecard\EditorModel.cs" />
+    <Compile Include="Models\View\Timecard\FinderModel.cs" />
     <Compile Include="Models\View\Timecard\SearchCriteriaModel.cs" />
     <Compile Include="Models\View\BaseSearchResultsModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UI\Controls\PagerHelper.cs" />
     <Compile Include="UI\Inputs\InputDateWithoutValidation.cs" />
+    <Compile Include="UI\Inputs\InputTextWithoutValidation.cs" />
     <Compile Include="UI\Selectors\BaseSelector.cs" />
+    <Compile Include="UI\Selectors\CompanySelector.cs" />
     <Compile Include="UI\Selectors\DataItem.cs" />
     <Compile Include="UI\Selectors\PersonSelector.cs" />
     <Compile Include="UI\Selectors\ProjectSelector.cs" />
@@ -237,6 +258,14 @@
     <Content Include="Views\Timecard\Edit.cshtml" />
     <Content Include="Views\Timecard\SearchResults.cshtml" />
     <Content Include="Views\Shared\_Find.cshtml" />
+    <Content Include="Views\Company\Edit.cshtml" />
+    <Content Include="Views\Company\SearchResults.cshtml" />
+    <Content Include="Views\Shared\_SearchResultsPager.cshtml" />
+    <Content Include="Views\Shared\_SearchResultsHeader.cshtml" />
+    <Content Include="Views\Company\Find.cshtml" />
+    <Content Include="Views\Person\Edit.cshtml" />
+    <Content Include="Views\Person\Find.cshtml" />
+    <Content Include="Views\Person\SearchResults.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
