--- a/Source/GitTime.Web/Views/Web.config
+++ b/Source/GitTime.Web/Views/Web.config
@@ -18,8 +18,9 @@
         <add namespace="System.Web.Optimization"/>
         <add namespace="System.Web.Routing" />
         <add namespace="GitTime.Web" />
-        <add namespace="GitTime.Web.UI.Selectors" />
+        <add namespace="GitTime.Web.UI.Controls" />
         <add namespace="GitTime.Web.UI.Inputs" />
+        <add namespace="GitTime.Web.UI.Selectors" />
       </namespaces>
     </pages>
   </system.web.webPages.razor>
