--- a/Source/GitTime.Web/Web.config
+++ b/Source/GitTime.Web/Web.config
@@ -5,29 +5,38 @@
   </configSections>
 
   <connectionStrings>
-    <add name="GitTime.LocalDB" connectionString="Data Source=(LocalDB)\v11.0;AttachDbFileName=|DataDirectory|\TimeTracker.mdf;Initial Catalog=TimeTracker;Integrated Security=True;" providerName="System.Data.SqlClient"/>
+    <add name="GitTime.LocalDB" connectionString="Data Source=(LocalDB)\v11.0;AttachDbFileName=|DataDirectory|\TimeTracker.mdf;Initial Catalog=TimeTracker;Integrated Security=True;" providerName="System.Data.SqlClient" />
     <add name="GitTime" connectionString="Data Source=(local);Initial Catalog=Local_GitTime;Integrated Security=True;" providerName="System.Data.SqlClient" />
-  </connectionStrings>  
-  
+  </connectionStrings>
+
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="GitHub.Application.ClientID" value="GITHUB_APP_CLIENTID" />
+    <add key="GitHub.Application.SecretKey" value="GITHUB_APP_SECRETKEY" />
   </appSettings>
-  
+
   <system.web>
     <compilation debug="true" targetFramework="4.5.1" />
-    
+
     <httpRuntime targetFramework="4.5.1" />
-  
+
     <authentication mode="Forms">
-      <forms name=".ASPXAUTH" loginUrl="~/Login" protection="All" timeout="43200" path="/" requireSSL="false" slidingExpiration="true" cookieless="UseDeviceProfile" domain="" enableCrossAppRedirects="false" />
+      <forms name=".ASPXAUTH" loginUrl="~/login" defaultUrl="~/home/index" protection="All" timeout="43200" path="/" requireSSL="false" slidingExpiration="true" cookieless="UseDeviceProfile" domain="" enableCrossAppRedirects="false" />
     </authentication>
 
     <globalization uiCulture="en" culture="en-CA" />
   </system.web>
-  
+
+  <system.webServer>
+    <modules>
+      <remove name="FormsAuthenticationModule" />
+      <add name="GitTimeAuthenticationModule" type="GitTime.Web.Infrastructure.Web.GitTimeAuthenticationModule" />
+    </modules>
+  </system.webServer>
+
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
